dimastriann.learn-rust-jwt-redis.8cf13f167a0492b7868d9e92efcf0f9eb22794b9
Running as unit: run-p1835196-i14415304.scope; invocation ID: 7c7d0c371e5d4a7b90ef2c023ec26061
   Compiling proc-macro2 v1.0.101
   Compiling unicode-ident v1.0.19
   Compiling libc v0.2.175
    Checking cfg-if v1.0.3
   Compiling autocfg v1.5.0
    Checking smallvec v1.15.1
    Checking log v0.4.28
   Compiling parking_lot_core v0.9.11
    Checking scopeguard v1.2.0
    Checking pin-project-lite v0.2.16
    Checking stable_deref_trait v1.2.0
    Checking memchr v2.7.5
    Checking bytes v1.10.1
   Compiling find-msvc-tools v0.1.1
   Compiling lock_api v0.4.13
   Compiling quote v1.0.40
   Compiling shlex v1.3.0
   Compiling version_check v0.9.5
    Checking futures-core v0.3.31
   Compiling serde v1.0.219
   Compiling syn v2.0.106
   Compiling jobserver v0.1.34
    Checking signal-hook-registry v1.4.6
    Checking mio v1.0.4
    Checking parking_lot v0.12.4
    Checking socket2 v0.6.0
    Checking futures-sink v0.3.31
    Checking itoa v1.0.15
   Compiling cc v1.2.36
   Compiling num-traits v0.2.19
    Checking litemap v0.8.0
    Checking writeable v0.6.1
   Compiling typenum v1.18.0
   Compiling generic-array v0.14.7
    Checking once_cell v1.21.3
   Compiling icu_properties_data v2.0.1
   Compiling icu_normalizer_data v2.0.0
   Compiling pkg-config v0.3.32
    Checking tracing-core v0.1.34
    Checking percent-encoding v2.3.2
   Compiling getrandom v0.3.3
   Compiling zerocopy v0.8.27
    Checking aho-corasick v1.1.3
    Checking regex-syntax v0.8.6
   Compiling time-core v0.1.6
    Checking futures-task v0.3.31
    Checking slab v0.4.11
    Checking powerfmt v0.2.0
   Compiling zstd-sys v2.0.16+zstd.1.5.7
    Checking pin-utils v0.1.0
   Compiling strsim v0.11.1
   Compiling num-conv v0.1.0
   Compiling fnv v1.0.7
   Compiling ident_case v1.0.1
   Compiling time-macros v0.2.24
    Checking futures-util v0.3.31
    Checking deranged v0.5.3
    Checking regex-automata v0.4.10
    Checking local-waker v0.1.4
   Compiling crc32fast v1.5.0
    Checking alloc-no-stdlib v2.0.4
    Checking ryu v1.0.20
   Compiling zstd-safe v7.2.4
    Checking time v0.3.43
    Checking http v0.2.12
    Checking regex v1.11.2
    Checking alloc-stdlib v0.2.2
    Checking rand_core v0.9.3
   Compiling synstructure v0.13.2
   Compiling darling_core v0.21.3
    Checking ppv-lite86 v0.2.21
    Checking crypto-common v0.1.6
    Checking block-buffer v0.10.4
    Checking num-integer v0.1.46
    Checking form_urlencoded v1.2.2
    Checking adler2 v2.0.1
    Checking utf8_iter v1.0.4
   Compiling unicode-xid v0.2.6
    Checking base64 v0.22.1
    Checking bitflags v2.9.4
    Checking hashbrown v0.15.5
   Compiling serde_json v1.0.143
    Checking equivalent v1.0.2
   Compiling thiserror v2.0.16
   Compiling httparse v1.10.1
    Checking indexmap v2.11.1
   Compiling tracing v0.1.41
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.0
   Compiling zerovec-derive v0.11.1
   Compiling displaydoc v0.2.5
   Compiling tokio-macros v2.5.0
   Compiling serde_derive v1.0.219
   Compiling tracing-attributes v0.1.30
   Compiling darling_macro v0.21.3
    Checking zerofrom v0.1.6
    Checking tokio v1.47.1
    Checking yoke v0.8.0
   Compiling darling v0.21.3
   Compiling bytestring v1.4.0
   Compiling thiserror-impl v2.0.16
    Checking zerovec v0.11.4
    Checking zerotrie v0.2.2
   Compiling derive_more-impl v2.0.1
    Checking tinystr v0.8.1
    Checking icu_locale_core v2.0.0
    Checking potential_utf v0.1.3
    Checking icu_collections v2.0.0
    Checking num-bigint v0.4.6
    Checking icu_provider v2.0.0
    Checking icu_properties v2.0.1
    Checking icu_normalizer v2.0.0
    Checking miniz_oxide v0.8.9
    Checking idna_adapter v1.2.1
    Checking digest v0.10.7
    Checking idna v1.1.0
    Checking rand_chacha v0.9.0
    Checking brotli-decompressor v5.0.0
    Checking tokio-util v0.7.16
    Checking actix-rt v2.11.0
    Checking actix-utils v3.0.1
   Compiling ring v0.17.14
   Compiling cookie v0.16.2
    Checking actix-service v2.0.3
    Checking cpufeatures v0.2.17
   Compiling pq-sys v0.7.2
   Compiling regex-lite v0.1.7
   Compiling diesel_derives v2.3.3
    Checking utf8parse v0.2.2
   Compiling heck v0.5.0
   Compiling either v1.15.0
    Checking anstyle-parse v0.2.7
   Compiling dsl_auto_type v0.2.0
    Checking sha1 v0.10.6
    Checking derive_more v2.0.1
    Checking brotli v8.0.2
    Checking url v2.5.7
    Checking actix-codec v0.5.2
    Checking h2 v0.3.27
    Checking flate2 v1.1.2
   Compiling actix-router v0.5.3
    Checking rand v0.9.2
   Compiling diesel_table_macro_syntax v0.3.0
    Checking local-channel v0.1.5
    Checking scheduled-thread-pool v0.2.7
    Checking getrandom v0.2.16
    Checking socket2 v0.5.10
    Checking encoding_rs v0.8.35
    Checking anstyle v1.0.11
    Checking language-tags v0.3.2
    Checking iana-time-zone v0.1.63
    Checking httpdate v1.0.3
    Checking foldhash v0.1.5
    Checking is_terminal_polyfill v1.70.1
    Checking mime v0.3.17
    Checking anstyle-query v1.1.4
    Checking untrusted v0.9.0
    Checking colorchoice v1.0.4
    Checking anstream v0.6.20
    Checking chrono v0.4.42
    Checking actix-server v2.6.0
    Checking r2d2 v0.8.10
    Checking simple_asn1 v0.6.3
   Compiling actix-web-codegen v4.3.0
    Checking serde_urlencoded v0.7.1
    Checking combine v4.6.7
   Compiling actix-macros v0.2.4
    Checking pem v3.0.5
    Checking env_filter v0.1.3
    Checking impl-more v0.1.9
    Checking downcast-rs v2.0.2
    Checking sha1_smol v1.0.1
    Checking jiff v0.2.15
    Checking byteorder v1.5.0
    Checking jsonwebtoken v9.3.1
    Checking dotenv v0.15.0
    Checking zstd v0.13.3
    Checking actix-http v3.11.1
    Checking env_logger v0.11.8
    Checking diesel v2.3.2
    Checking actix-web v4.11.0
    Checking redis v0.32.5
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.3.2/src/query_builder/ast_pass.rs:228:51
    |
228 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
